# APEX

./: README.md
AP-MS2/: .gitignore  AstarAlgo.cpp  AstarAlgo.h  BFS.cpp  BFS.h  Base64Codec.cpp  Base64Codec.h  BestFirstSearch.h  CMakeLists.txt  DFS.cpp  DFS.h  FileCacheManager.cpp  FileCacheManager.h  ICacheManager.h  IClientHandler.h  ISearchable.h  ISearcher.h  IServer.h  ISolver.h  MazeDomain.cpp  MazeDomain.h  MyClientHandler.cpp  MyClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MyPriorityQueue.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  POSIXSockets.cpp  POSIXSockets.h  README.md  Searchable.h  SearchableSolverAdapter.cpp  SearchableSolverAdapter.h  Searcher.h  SearcherSolution.h  Solution.h  State.h  (+5 more)
AP-flightgear-interpreter/: .gitignore  BinaryExpression.cpp  BinaryExpression.h  CMakeLists.txt  Command.h  ConditionParser.cpp  ConditionParser.h  ConnectCommand.cpp  ConnectCommand.h  DBEngine.cpp  DBEngine.h  DefineVarCommand.cpp  DefineVarCommand.h  Div.cpp  Div.h  Expression.h  IfCommand.cpp  IfCommand.h  Lexer.cpp  Lexer.h  LoopCommand.cpp  LoopCommand.h  Minus.cpp  Minus.h  Mul.cpp  Mul.h  Neg.cpp  Neg.h  Number.cpp  Number.h  OpenServerCommand.cpp  OpenServerCommand.h  Parser.cpp  Parser.h  Plus.cpp  Plus.h  Power.cpp  Power.h  PrintCommand.cpp  PrintCommand.h  (+15 more)
AP2EX1/: Ex1.sln  README.md
AP2EX1/Ex1/: Ex1.csproj  Program.cs
AP2EX1/Ex1/Properties/: AssemblyInfo.cs
AP2EX1/Ex1Lib/: ComposedMission.cs  Ex1Lib.csproj  FunctionsContainer.cs  IMission.cs  SingleMission.cs
AP2EX1/Ex1Lib/Properties/: AssemblyInfo.cs
AP2M3/: AP2M3.sln
AP2M3/AP2M3/: AP2M3.csproj  App.config  App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
AP2M3/AP2M3/Model/: ApplicationSettingsModel.cs  AutoPilotScript.cs  CommandHandler.cs  ExtensionMethods.cs  FlightBoardModel.cs  FlightControlModel.cs
AP2M3/AP2M3/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs  Settings.settings
AP2M3/AP2M3/ViewModels/: BaseNotify.cs  FlightBoardViewModel.cs  FlightControlsViewModel.cs
AP2M3/AP2M3/Views/: AutoPilotControls.xaml  AutoPilotControls.xaml.cs  FGNameValue.xaml  FGNameValue.xaml.cs  FGSliderControl.xaml  FGSliderControl.xaml.cs  FlightBoard.xaml  FlightBoard.xaml.cs  FlightMonitoringPanel.xaml  FlightMonitoringPanel.xaml.cs  Joystick.xaml  Joystick.xaml.cs  ManualControls.xaml  (+5 more)
AP2M4/: AP2M4.sln
AP2M4/AP2M4/: AP2M4.csproj  Global.asax  Global.asax.cs
AP2M5/app/: build.gradle
APEx2/: CMakeLists.txt  CompanyEmployee.cpp  CompanyEmployee.h  CompanyFlight.cpp  CompanyFlight.h  CompanyPlane.cpp  CompanyPlane.h  DBEngine.cpp  DBEngine.h  Date.cpp  MyImplementation.cpp  MyImplementation.h  Passenger.cpp  Passenger.h  SeatReservation.cpp  SeatReservation.h  main.cpp
(+47 files in other folders)
